--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,454 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>Creative bakery</title>
+    <link rel="icon" href="images/favicon.png">
     <link rel="stylesheet" href="./styles/main.scss">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page__body">
+    <header class="header">
+      <div class="container">
+        <div class="header__content">
+          <div class="header__nav">
+
+            <a href="#" class="link">
+              <img
+                src="images/logo.png"
+                alt="Creative bakery"
+                class="logo"
+              >
+            </a>
+
+            <a href="#menu" class="link link--menu">
+              <img
+                src="images/menu.svg"
+                alt="menu"
+                class="menu"
+              >
+            </a>
+
+            <nav class="nav">
+              <ul class="nav__list">
+                <li class="nav__item">
+                  <a href="#products" class="nav__link link">
+                    Products
+                  </a>
+                </li>
+
+                <li class="nav__item">
+                  <a href="#about-us" class="nav__link link">
+                    About us
+                  </a>
+                </li>
+
+                <li class="nav__item">
+                  <a href="#blog" class="nav__link link">
+                    Blog
+                  </a>
+                </li>
+
+                <li class="nav__item nav__item--handset">
+                  <img
+                    src="images/handset.svg"
+                    alt="handset"
+                    class="phone"
+                  >
+                  <a href="#contact-us" class="nav__link link nav__link--contact">
+                    Contact us
+                  </a>
+                </li>
+              </ul>
+            </nav>
+          </div>
+        </div>
+      </div>
+    </header>
+
+    <div class="menu-nav page__menu" id="menu">
+      <div class="container">
+        <div class="menu-nav__content">
+          <a href="#" class="link">
+            <img
+              src="images/logo.png"
+              alt="Bakery logo"
+              class="logo"
+            >
+          </a>
+          <a href="#" class="link link__icon">
+            <img
+              src="images/cross.svg"
+              alt="menu"
+              class="menu"
+            >
+          </a>
+        </div>
+        <ul class="menu-nav__list">
+          <li class="nav__item">
+            <a href="#products" class="nav__link nav__link--big link">
+              Products
+            </a>
+          </li>
+
+          <li class="nav__item">
+            <a href="#about-us" class="nav__link nav__link--big link">
+              About us
+            </a>
+          </li>
+
+          <li class="nav__item">
+            <a href="#blog" class="nav__link nav__link--big link">
+              Blog
+            </a>
+          </li>
+
+          <li class="nav__item nav__item--handset">
+            <img
+              src="images/handset.svg"
+              alt="handset"
+              class="phone"
+            >
+            <a href="#contact-us" class="nav__link link nav__link--big nav__link--contact">
+              Contact us
+            </a>
+          </li>
+        </ul>
+      </div>
+    </div>
+
+    <main class="main">
+      <section class="top-part">
+        <div class="container">
+          <div class="grid">
+            <div class="
+              grid__item--1-2
+              grid__item--tablet-1-4
+              grid__item--desktop-1-2"
+            >
+              <p class="top-part__description">
+                We bake your fantasies — croissants,
+                cakes, cookies, and cupcakes.
+              </p>
+            </div>
+            <div class="
+              grid__item--1-2
+              grid__item--tablet-1-8
+              grid__item--desktop-1-8"
+            >
+              <div class="top-part__wrapper">
+                <h1 class="top-part__title">
+                  Creative bakery
+                </h1>
+                <div class="top-part__img">
+                  <img
+                    src="images/Cookie.svg"
+                    alt="Cookie"
+                    class="top-part__logo"
+                  >
+                </div>
+              </div>
+            </div>
+
+            <div class="
+              grid__item--1-2
+              grid__item--tablet-3-6
+              grid__item--desktop-1-2"
+            >
+              <a href="#about-us" class="button">
+                Learn more
+              </a>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="page__section" id="products">
+        <div class="container">
+          <h2 class="page__section-title">
+            What we bake
+          </h2>
+          <p class="page__section-describe">
+            We can customize our cookies right for your needs. Just imagine it
+          </p>
+
+          <div class="place">
+            <div class="grid grid--tablet">
+              <div class="grid__item--card1">
+                <div class="place__card">
+                  <img
+                    src="images/photo-product-01.jpg"
+                    alt="Place1"
+                    class="place__photo"
+                  >
+
+                  <h3 class="place__title">Cakes</h3>
+
+                  <p class="place__description">
+                    Oatmeal cookies with golden raisins, orange zest and
+                    chocolate chips
+                  </p>
+
+                  <a href="#contact-us" class="place__link">Order</a>
+                </div>
+              </div>
+
+              <div class="grid__item--card2">
+                <div class="place__card">
+                  <img
+                    src="images/photo-product-06.jpg"
+                    alt="Place1"
+                    class="place__photo"
+                  >
+
+                  <h3 class="place__title">Cakes</h3>
+
+                  <p class="place__description">
+                    Chocolate biscuit coffee cake topped with a buttercream and
+                    powder
+                  </p>
+
+                  <a href="#contact-us" class="place__link">Order</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="place">
+            <div class="grid grid--tablet">
+              <div class="grid__item--card3">
+                <div class="place__card">
+                  <img
+                    src="images/photo-product-05.jpg"
+                    alt="Place2"
+                    class="place__photo"
+                  >
+
+                  <h3 class="place__title">Donuts</h3>
+
+                  <p class="place__description">
+                    Light multi-layered croissant strewn with cinammon and
+                    almond “petals”
+                  </p>
+
+                  <a href="#contact-us" class="place__link">Order</a>
+                </div>
+              </div>
+
+              <div class="grid__item--card4">
+                <div class="place__card">
+                  <img
+                    src="images/photo-product-04.jpg"
+                    alt="Place2"
+                    class="place__photo"
+                  >
+
+                  <h3 class="place__title">Donuts</h3>
+
+                  <p class="place__description">
+                    Light multi-layered croissant strewn with coconut and nuts
+                  </p>
+
+                  <a href="#contact-us" class="place__link">Order</a>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <div class="place">
+            <div class="grid grid--tablet">
+              <div class="grid__item--card5">
+                <div class="place__card">
+                  <img
+                    src="images/photo-product-03.jpg"
+                    alt="Place3"
+                    class="place__photo"
+                  >
+
+                  <h3 class="place__title">Cakes</h3>
+
+                  <p class="place__description">
+                    Cake with chocolate salted caramel, Vanilla frutti pebbles inside
+                  </p>
+
+                  <a href="#contact-us" class="place__link">Order</a>
+                </div>
+              </div>
+
+              <div class="grid__item--card6">
+                <div class="place__card">
+                  <img
+                    src="images/photo-product-02.jpg"
+                    alt="Place3"
+                    class="place__photo"
+                  >
+
+                  <h3 class="place__title">Cookies</h3>
+
+                  <p class="place__description">
+                    Oatmeal cookies with golden raisins, orange zest and
+                    chocolate chips
+                  </p>
+
+                  <a href="#contact-us" class="place__link">Order</a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section class="page__section about-us" id="about-us">
+        <div class="container">
+          <div class="grid grid--tablet">
+            <div class="grid__item--about-us">
+              <h2 class="page__section-title about-us__title">Few words <br> About us</h2>
+            </div>
+
+            <div class="grid__item--about-text">
+              <p class="about-us__text">
+                Like many design teams, Onfido made the transition from Abstract + Sketch, to Figma in the last couple of years. One of the common resistance points internally before making that switch, was Figma’s lack of Git-style branching that Abstract enabled. The design team had come to rely on branching and had built a lot of our processes around it.
+              </p>
+            </div>
+
+            <div class="grid__item--year">
+              <p class="about-us__number">2015</p>
+              <h3 class="about-us__feature">Foundation year</h3>
+            </div>
+
+            <div class="grid__item--stores">
+              <p class="about-us__number">23</p>
+              <h3 class="about-us__feature">Stores</h3>
+            </div>
+
+            <div class="grid__item--companies">
+              <p class="about-us__number">155</p>
+              <h3 class="about-us__feature">Companies</h3>
+            </div>
+
+            <div class="grid__item--clients">
+              <p class="about-us__number">10k+</p>
+              <h3 class="about-us__feature">Clients</h3>
+            </div>
+          </div>
+        </div>
+      </section>
+
+
+      <footer class="footer" id="contact-us">
+        <div class="container">
+          <div class="grid grid--tablet">
+            <div class="grid__item--footer-menu">
+              <a href="#">
+                <img
+                src="images/Bakerlab.svg"
+                alt="Creative Bakery"
+                class="logo__image logo__footer logo"
+                >
+              </a>
+
+              <ul class="footer__list">
+                <li class="footer__list-item">Menu</li>
+                <li class="footer__list-item">
+                  <a href="#products" class="footer__list-link">Products</a>
+                </li>
+                <li class="footer__menu-item">
+                  <a href="#about-us" class="footer__list-link">About Us</a>
+                </li>
+                <li class="footer__menu-item">
+                  <a href="#blog" class="footer__list-link">Blog</a>
+                </li>
+                <li class="footer__menu-item">
+                  <a href="#" class="footer__list-link">Terms & Privacy</a>
+                </li>
+              </ul>
+            </div>
+
+            <div class="grid__item--footer-title">
+              <h2 class="page__section-title footer__title" id="contact-Us">Contact us</h2>
+            </div>
+
+            <div class="grid__item--call-us">
+              <ul class="footer__list">
+                <li class="footer__list-item">Call us</li>
+                <li class="footer__list-item">
+                  <a href="tel:(629) 555-0129" class="footer__list-link">(629) 555-0129</a>
+                </li>
+                <li class="footer__list-item">
+                  <a href="tel:(603) 555-0123" class="footer__list-link">(603) 555-0123</a>
+                </li>
+                <li class="footer__list-item">
+                  <a href="tel:(704) 555-0127" class="footer__list-link">(704) 555-0127</a>
+                </li>
+              </ul>
+            </div>
+
+            <div class="grid__item--email-us">
+              <ul class="footer__list footer__list-email">
+                <li class="footer__list-item">Email us</li>
+                <li class="footer__list-item">
+                  <a href="mailto:bakerlab@example.com" class="footer__list-link">bakerlab@example.com</a>
+                </li>
+              </ul>
+            </div>
+
+            <div class="grid__item--footer-blog">
+              <section class="footer__blog" id="blog">
+                <a
+                  target="_blank"
+                  href="https://facebook.com/"
+                  class="footer__blog-icon"
+                >
+                  <svg
+                    class="footer__blog-icon--1"
+                    width="11"
+                    height="20"
+                    viewBox="0 0 11 20"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path d="M7 11.5H9.5L10.5 7.5H7V5.5C7 4.47 7 3.5 9 3.5H10.5V0.14C10.174 0.0970001 8.943 0 7.643 0C4.928 0 3 1.657 3 4.7V7.5H0V11.5H3V20H7V11.5Z" fill="currentColor">
+                  </svg>
+                </a>
+                <a
+                  target="_blank"
+                  href="https://instagram.com/"
+                  class="footer__blog-icon"
+                >
+                  <svg
+                    class="footer__blog-icon--2"
+                    viewBox="0 0 20 20"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path d="M10 0C12.717 0 13.056 0.00999994 14.122 0.0599999C15.187 0.11 15.912 0.277 16.55 0.525C17.21 0.779 17.766 1.123 18.322 1.678C18.8305 2.1779 19.224 2.78259 19.475 3.45C19.722 4.087 19.89 4.813 19.94 5.878C19.987 6.944 20 7.283 20 10C20 12.717 19.99 13.056 19.94 14.122C19.89 15.187 19.722 15.912 19.475 16.55C19.2247 17.2178 18.8311 17.8226 18.322 18.322C17.822 18.8303 17.2173 19.2238 16.55 19.475C15.913 19.722 15.187 19.89 14.122 19.94C13.056 19.987 12.717 20 10 20C7.283 20 6.944 19.99 5.878 19.94C4.813 19.89 4.088 19.722 3.45 19.475C2.78233 19.2245 2.17753 18.8309 1.678 18.322C1.16941 17.8222 0.775931 17.2175 0.525 16.55C0.277 15.913 0.11 15.187 0.0599999 14.122C0.0129999 13.056 0 12.717 0 10C0 7.283 0.00999994 6.944 0.0599999 5.878C0.11 4.812 0.277 4.088 0.525 3.45C0.775236 2.78218 1.1688 2.17732 1.678 1.678C2.17767 1.16923 2.78243 0.775729 3.45 0.525C4.088 0.277 4.812 0.11 5.878 0.0599999C6.944 0.0129999 7.283 0 10 0ZM10 5C8.67392 5 7.40215 5.52678 6.46447 6.46447C5.52678 7.40215 5 8.67392 5 10C5 11.3261 5.52678 12.5979 6.46447 13.5355C7.40215 14.4732 8.67392 15 10 15C11.3261 15 12.5979 14.4732 13.5355 13.5355C14.4732 12.5979 15 11.3261 15 10C15 8.67392 14.4732 7.40215 13.5355 6.46447C12.5979 5.52678 11.3261 5 10 5ZM16.5 4.75C16.5 4.41848 16.3683 4.10054 16.1339 3.86612C15.8995 3.6317 15.5815 3.5 15.25 3.5C14.9185 3.5 14.6005 3.6317 14.3661 3.86612C14.1317 4.10054 14 4.41848 14 4.75C14 5.08152 14.1317 5.39946 14.3661 5.63388C14.6005 5.8683 14.9185 6 15.25 6C15.5815 6 15.8995 5.8683 16.1339 5.63388C16.3683 5.39946 16.5 5.08152 16.5 4.75ZM10 7C10.7956 7 11.5587 7.31607 12.1213 7.87868C12.6839 8.44129 13 9.20435 13 10C13 10.7956 12.6839 11.5587 12.1213 12.1213C11.5587 12.6839 10.7956 13 10 13C9.20435 13 8.44129 12.6839 7.87868 12.1213C7.31607 11.5587 7 10.7956 7 10C7 9.20435 7.31607 8.44129 7.87868 7.87868C8.44129 7.31607 9.20435 7 10 7Z" fill="currentColor">
+                  </svg>
+                </a>
+                <a
+                  target="_blank"
+                  href="https://twitter.com/"
+                  class="footer__blog-icon"
+                >
+                  <svg
+                    class="footer__blog-icon--3"
+                    viewBox="0 0 22 18"
+                    fill="none"
+                    xmlns="http://www.w3.org/2000/svg"
+                  >
+                    <path d="M21.162 2.65593C20.3986 2.99362 19.589 3.2154 18.76 3.31393C19.6337 2.79136 20.2877 1.96894 20.6 0.999927C19.78 1.48793 18.881 1.82993 17.944 2.01493C17.3146 1.34151 16.4804 0.89489 15.5709 0.744511C14.6615 0.594133 13.7279 0.748418 12.9153 1.18338C12.1026 1.61834 11.4564 2.30961 11.0771 3.14972C10.6978 3.98983 10.6067 4.93171 10.818 5.82893C9.1551 5.74558 7.52832 5.31345 6.04328 4.56059C4.55823 3.80773 3.24812 2.75097 2.19799 1.45893C1.82628 2.09738 1.63095 2.82315 1.63199 3.56193C1.63199 5.01193 2.36999 6.29293 3.49199 7.04293C2.828 7.02202 2.17862 6.84271 1.59799 6.51993V6.57193C1.59819 7.53763 1.93236 8.47354 2.54384 9.22099C3.15532 9.96843 4.00647 10.4814 4.95299 10.6729C4.33661 10.84 3.6903 10.8646 3.06299 10.7449C3.32986 11.5762 3.85 12.3031 4.55058 12.824C5.25117 13.3449 6.09712 13.6337 6.96999 13.6499C6.10247 14.3313 5.10917 14.8349 4.04687 15.1321C2.98458 15.4293 1.87412 15.5142 0.778992 15.3819C2.69069 16.6114 4.91609 17.264 7.18899 17.2619C14.882 17.2619 19.089 10.8889 19.089 5.36193C19.089 5.18193 19.084 4.99993 19.076 4.82193C19.8949 4.23009 20.6016 3.49695 21.163 2.65693L21.162 2.65593Z" fill="currentColor">
+                  </svg>
+                </a>
+              </section>
+            </div>
+
+            <div class="grid__item--copyright">
+              <p class="footer__copyright">© Bakerlab 2022</p>
+            </div>
+          </div>
+        </div>
+      </footer>
+
+    </main>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
